--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "cheerio": "1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,6 +25,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1"
   }
