--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "axios": "^1.6.3",
     "cheerio": "1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "iconv-lite": "^0.6.3",
     "morgan": "^1.10.0",
     "process": "^0.11.10",
     "tsx": "^4.7.0",
