--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx tsx watch index.ts"
+		"dev": "npx tsx watch index.ts",
+		"build": "tsc -p .",
+		"start": "node ./dist/index.js"
+
   },
   "keywords": [],
-  "type": "module",
+  "type": "commonjs",
   "author": "",
   "license": "ISC",
   "dependencies": {
