--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx tsx watch index.ts",
-		"build": "tsc -p .",
-		"start": "node ./dist/index.js"
-
+    "dev": "npx tsx watch index.ts",
+    "build": "tsc -p .",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "type": "commonjs",
@@ -24,7 +23,9 @@
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "morgan": "^1.10.0",
+    "pre-commit": "^1.2.2",
     "process": "^0.11.10",
+    "rimraf": "^5.0.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
