--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tsx watch index.ts",
-    "build": "tsc -p .",
-    "start": "node ./dist/index.js"
+		"build": "rimraf dist && tsc",
+    "start": "node ./dist/index.js",
+		"add-build": "git add dist",
+		"ts.check": "tsc --project tsconfig.json"
   },
+
+	"pre-commit": [
+		"ts.check",
+		"build",
+		"add-build"
+	],
+
   "keywords": [],
   "type": "commonjs",
   "author": "",
