--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "rovr-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./api/index.ts",
   "scripts": {
-    "dev": "npx tsx watch index.ts",
-		"build": "rimraf dist && tsc",
-    "start": "node ./dist/index.js",
+    "dev": "npx tsx watch ./api/index.ts",
+		"build": "tsc",
+    "start": "node ./dist/api/index.js",
 		"add-build": "git add dist",
 		"ts.check": "tsc --project tsconfig.json"
   },
