--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "target": "es6",
 		"esModuleInterop": true,
   },
-  "include": ["app/**/*"],
+  "include": ["api/**/*"],
   "exclude": ["node_modules", "dist"]
 }
