--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,4 @@
 {
-  "version": 2,
-  "builds": [{
-    "src": "package.json",
-    "use": "@vercel/node"
-  }],
-  "routes": [{
-    "src": "/(.*)",
-    "dest": "/dist/index.js"
-  }]
+	"version": 2,
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
